--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,19 @@
 body {
   font-family: 'Kanit', serif;
 }
+
+th {
+  padding: 20px 15px;
+  text-align: left;
+  font-weight: 500;
+  font-size: 14px;
+  color: #fff;
+  text-transform: uppercase;
+}
+td {
+  padding: 15px;
+  text-align: left;
+  vertical-align: middle;
+  font-weight: 300;
+  font-size: 13px;
+}
