--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Kanit', serif;
 }
-/* 
+
 th {
   padding: 20px 15px;
   text-align: left;
@@ -16,7 +16,7 @@ td {
   vertical-align: middle;
   font-weight: 300;
   font-size: 13px;
-} */
+}
 
 
 .modal {
