--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,3 +105,50 @@ input:checked + .slider .off {
 .slider.round:before {
   border-radius: 50%;
 }
+
+.activeNumbers {
+  min-height: 170px;
+  max-height: 170px;
+  overflow-y: scroll;
+}
+.tag {
+  max-height: 52px;
+}
+.editor {
+  width: 100%;
+  min-height: 100px;
+  cursor: text;
+}
+
+.tag-input {
+  width: 100%;
+  /* border: 1px solid #eee; */
+  font-size: 0.9em;
+  height: 50px;
+  box-sizing: border-box;
+  padding: 0 10px;
+}
+
+.tag-input__tag {
+  height: 30px;
+  float: left;
+  margin-right: 10px;
+  background-color: #eee;
+  margin-top: 10px;
+  line-height: 30px;
+  padding: 0 5px;
+  border-radius: 5px;
+}
+
+.tag-input__tag > span {
+  cursor: pointer;
+  opacity: 0.75;
+}
+
+.tag-input__text {
+  border: none;
+  outline: none;
+  font-size: 0.9em;
+  line-height: 50px;
+  background: none;
+}
